# multi-agent-research-assistant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_queries.txt
src/multi_agent_research_assistant/: __init__.py  cli.py  config.py  models.py  orchestrator.py
src/multi_agent_research_assistant/agents/: __init__.py  base.py  extraction_agent.py  report_generation_agent.py  research_agent.py  summarization_agent.py
src/multi_agent_research_assistant/llm/: __init__.py  base.py  factory.py  heuristic.py  ollama_client.py
src/multi_agent_research_assistant/tools/: __init__.py  search.py  text.py  web.py
tests/: test_pipeline.py  test_search_tool.py  test_text_tools.py
